list nft page redesigned

--- a/src/app/modules/authentication/components/create-nft-page/create-nft-page.component.html
+++ b/src/app/modules/authentication/components/create-nft-page/create-nft-page.component.html
@@ -157,9 +157,7 @@
               </div>
               <div class="box-body">
                 <textarea class="transparent-inputs"
-                  >{{ response }}
-                              </textarea
-                >
+                  >{{ response | json }}</textarea>
               </div>
             </div>
           </div>
