--- a/src/app/modules/authentication/components/read-nft-page/read-nft-page.component.html
+++ b/src/app/modules/authentication/components/read-nft-page/read-nft-page.component.html
@@ -130,7 +130,7 @@
                 </table>
               </div>
               <div class="box-body">
-                <textarea class="transparent-inputs">{{ response }}</textarea>
+                <textarea class="transparent-inputs">{{ response | json }}</textarea>
               </div>
             </div>
           </div>
