solana create NFT done

--- a/src/app/modules/static/components/landing/landing.component.html
+++ b/src/app/modules/static/components/landing/landing.component.html
@@ -18,16 +18,16 @@
             </p>
           </div>
           <div class="hero-button-container">
-            <a routerLink="/get-api-key"
+            <a routerLink="/dashboard"
               ><button class="btn-solid-reg">Try Shift for Free</button></a
             >
-            <p class="p-para-normal">
+            <!-- <p class="p-para-normal">
               If you already have an API key,
               <a class="gradient-text" routerLink="/dashboard"
                 ><b>click here</b></a
               >
               to continue
-            </p>
+            </p> -->
           </div>
         </div>
       </div>
