--- a/src/app/modules/shared/components/side-nav/side-nav.component.html
+++ b/src/app/modules/shared/components/side-nav/side-nav.component.html
@@ -17,13 +17,22 @@
     (click)="toggleSideNav()"
     >Dismiss</a
   >
-  <a routerLink="/dashboard/create-nft" [ngClass]="page === 1 ? 'active' : ''" (click)="navigatePage(1)"
+  <!-- <a routerLink="/dashboard/create-nft" [ngClass]="page === 1 ? 'active' : ''" (click)="navigatePage(1)"
     >Create NFTs</a
   >
   <a routerLink="/dashboard/read-nft" [ngClass]="page === 2 ? 'active' : ''" (click)="navigatePage(2)"
     >Read NFTs</a
+  > -->
+  <a
+    routerLink="/dashboard/create-nft-solana"
+    [ngClass]="page === 3 ? 'active' : ''"
+    (click)="navigatePage(3)"
+    >Create NFTs (Alpha)</a
   >
-  <a routerLink="/dashboard/list-nft" [ngClass]="page === 3 ? 'active' : ''" (click)="navigatePage(3)"
+  <a
+    routerLink="/dashboard/list-nft"
+    [ngClass]="page === 4 ? 'active' : ''"
+    (click)="navigatePage(4)"
     >List NFTs (Alpha)</a
   >
 </div>
