mobile modal design updated

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -2722,3 +2722,9 @@ p.custom-desc-title a::before {
     
   } */
 }
+
+@media (max-width: 400px) {
+  .modal {
+    max-width: 95% !important;
+  }
+}
